# transition-ticket-ng

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  flake.nix  justfile  rust-toolchain.toml
api/: Cargo.toml
app-cli/: Cargo.toml
app-cli/src/: main.rs
app-gui/: Cargo.toml
app-util/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
desktop/: Cargo.toml
gui/: Cargo.toml
gui/src/: main.rs  product.rs  ui.rs  user.rs
mobile/: Cargo.toml
task/: Cargo.toml
task/src/: cpp.rs  hyg.rs  lib.rs  platform.rs
ui/: Cargo.toml
util/: Cargo.toml
util/src/: browser.rs  config.rs  lib.rs  log.rs  net.rs  notice.rs
web/: Cargo.toml
