[workspace]
members = [
    "cli",

    "desktop",
    "mobile",
    "web",
    "ui",
    "api",

    "task",
    "util",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.87.0"
authors = ["biliticket"]
description = "Next Generation Transition Ticket"
license = "GPL-3.0"
repository = "https://github.com/biliticket/transition-ticket-ng"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
shadow-rs = "1.1"

dioxus = "0.6"
ui = { path = "ui" }

[patch.crates-io]
ort = { git="https://github.com/biliticket/ort" }
ort-sys = { git = "https://github.com/biliticket/ort" }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
