[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
util = { path = "../util", version = "0.1.0" }
task = { path = "../task", version = "0.1.0" }
