[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
util = { path = "../util" }
task = { path = "../task" }

tokio = { version = "1.45", features = ["full", "tracing"] }
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
promkit = { version = "0.9", features = ["all"] }
indicatif = { version = "0.17", features = ["tokio"] }

shadow-rs = "1.1"

anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true

[build-dependencies]
shadow-rs = "1.1"
