[package]
name = "desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { path = "../ui" }

[features]
default = []
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
