[package]
name = "gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
dioxus = { version = "0.6", features = ["router", "fullstack"] }

shadow-rs = { version = "1.1", default-features = false }

[build-dependencies]
shadow-rs = "1.1"

[features]
default = []
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]
