[package]
name = "mobile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }

[features]
default = []
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
