[package]
name = "task"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
util = { path = "../util", version = "0.1" }

tokio = { version = "1.45", features = ["full", "tracing"] }
statum = { version = "0.1", features = ["serde"] }
bili_ticket_gt = { git = "https://github.com/Amorter/biliTicker_gt", branch = "rust" }

anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
shadow-rs.workspace = true

[build-dependencies]
shadow-rs.workspace = true
