[package]
name = "util"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.45", features = ["full", "tracing"] }

reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "json", "rustls-tls", "socks"] }
reqwest-middleware = { version = "0.4", features = ["http2", "rustls-tls", "charset", "json"] }
reqwest-retry = "0.7"
reqwest-tracing = "0.5"

thirtyfour = "0.35"
config = "0.15"
dirs = "6.0"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["time"] }
sentry = { version = "0.38", features = ["anyhow", "rustls", "sentry-anyhow", "sentry-tracing", "tracing"] }

anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
